--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-html{
+html {
     background: #FF9D56 url("res/main_background.png");
 }
 
 html, body {
-    height:100%;
+    height: 100%;
 }
 
 .block {
@@ -13,13 +13,15 @@ html, body {
     color: #ffae34;
     font-size: 1.5em;
     background-color: #3f151e;
+    word-wrap: break-word;
+    table-layout:fixed;
 }
 
 #header {
     grid-area: header;
     margin: 1% auto;
     color: #ffaa33;
-    border:2px solid rgba(255, 157, 86, 0.65);;
+    border: 2px solid rgba(255, 157, 86, 0.65);;
 }
 
 #name {
@@ -36,6 +38,8 @@ html, body {
     grid-area: table;
     vertical-align: center;
     horiz-align: center;
+    min-width: 0;
+    min-height: 0;
     width: 90%;
 }
 
@@ -44,19 +48,24 @@ table {
     border: 2px solid rgba(255, 157, 86, 0.65);;
     width: 96%;
     height: 90%;
+    min-width: 0;
+    min-height: 0;
     horiz-align: center;
+    table-layout:fixed;
+    word-wrap: break-word;
     margin: 2%;
 }
 
 td {
     border: 2px solid rgba(162, 97, 96, 0.36);
     text-align: center;
-    display:inline-block;
+    word-wrap: break-word;
 }
 
 th {
     border: 2px solid rgba(162, 97, 96, 0.36);
     text-align: center;
+    word-wrap: break-word;
 }
 
 #footer {
@@ -76,11 +85,9 @@ th {
     justify-items: center;
     grid-template-columns: 60% 40%;
     grid-template-rows: auto;
-    grid-template-areas: "header header"
-    "table image"
-    "footer footer";
+    grid-template-areas: "header header" "table image" "footer footer";
     width: 95%;
-    font-family:monospace;
+    font-family: monospace;
     border: 3px solid #341119;
     background-color: #341119;
     opacity: 1;
@@ -90,17 +97,17 @@ th {
 #form_container {
     display: grid;
     justify-items: center;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 60% 40%;
     grid-template-rows: auto;
-    grid-template-areas: "header header"
-    "margins image"
-    "footer footer";
+    grid-template-areas: "header header" "margins image" "footer footer";
     width: 95%;
-    font-family:monospace;
+    font-family: monospace;
     border: 3px solid #341119;
     background-color: #341119;
     opacity: 1;
     margin: 1% auto;
+    table-layout:fixed;
+    word-wrap: break-word;
 }
 
 #image {
@@ -110,8 +117,10 @@ th {
 }
 
 #image img {
-    width: 48%;
-    height: 48%;
+    width: 60%;
+    height: 60%;
+    max-height: 350px;
+    max-width: 350px;
     border-radius: 20%;
     border: 6px solid #341119;
 }
@@ -120,31 +129,47 @@ th {
     height: 80%;
 }
 
-input[type='text']{
+input[type='text'] {
     width: 70%;
-    font-size: 0.9em;
+    font-size: 95%;
     align-content: center;
     /*border: 2px solid rgba(162, 97, 96, 0.36);*/
     background: #ffaa33;
 }
 
-input[type='submit']{
+/*
+for placeholder
+
+::-webkit-input-placeholder {
+    font-size: 20%;
+}
+::-moz-placeholder {
+    font-size: 20%;
+}
+:-ms-input-placeholder {
+    font-size: 20%;
+}
+::placeholder {
+    font-size: 20%;
+} */
+
+input[type='submit'] {
     width: 25%;
     height: 70%;
-    font-size: 0.9em;
+    font-size: 100%;
+    align-content: right;
     overflow-wrap: break-word;
     border: 2px solid rgba(162, 97, 96, 0.36);
     border-radius: 20px;
-    background: rgba(255, 157, 86, 1);
-    color: darkred;
+    background: rgb(170, 203, 59);
+    color: #3f151e;
 }
-
 
 .styled-select select {
     background: transparent;
-    width: 110%;
+    width: 100%;
     height: 100%;
-    font-size: 0.9em;
+    font-size: 95%;
     border: 2px solid rgba(162, 97, 96, 0.36);
 }
 
@@ -155,7 +180,7 @@ input[type='submit']{
     background: url(/res/arrow.png) no-repeat right #ffaa33;
 }
 
-.invalid_input_message{
+.invalid_input_message {
     color: #BA2609;
     margin-left: 2%;
     font-size: 0.8em;
@@ -165,15 +190,18 @@ input[type='submit']{
     border: 4px solid #BA2609;
 }
 
-.param_field{
-    border-color: rgba(255, 157, 86, 0.65);
+.param_field {
+    border-color: rgba(255, 157, 86, 0.65);;
 }
 
-#y_note{
-    font-size: 0.8em;
-}
-
-h4{
+h4 {
     margin: 0;
+}
+
+a {
+    color: #fbf4ff;
+}
+
+#submit_lable{
 }
 
